force-app/main/default/objects/Bid_Information_Request__c/Bid_Information_Request__c.object-meta.xml
<CustomObject>
    <description>Request for information needed to complete a Bid</description>
    <label>Bid Information Request</label>
    <nameField>
        <displayFormat>BIR-{00000}</displayFormat>
        <label>Bid Information Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bid Information Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>