force-app/main/default/objects/Bid_Information_Request__c/fields/Answer_due_date__c.field-meta.xml
<CustomField>
    <fullName>Answer_due_date__c</fullName>
    <label>Answer due date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>