force-app/main/default/objects/Bid_Information_Request__c/fields/Approved_Equals_Date__c.field-meta.xml
<CustomField>
    <fullName>Approved_Equals_Date__c</fullName>
    <formula>Customer_Contract__r.Approved_Equal_Due_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approved Equals Date</label>
    <type>Date</type>
</CustomField>