force-app/main/default/objects/Bid_Information_Request__c/fields/Bid_Date__c.field-meta.xml
<CustomField>
    <fullName>Bid_Date__c</fullName>
    <formula>Customer_Contract__r.Bid_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bid Due Date</label>
    <type>Date</type>
</CustomField>