force-app/main/default/objects/Bid_Information_Request__c/fields/Bid_Information_Request__c.field-meta.xml
<CustomField>
    <fullName>Bid_Information_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Detailed information request to summarize for a Bid Response</description>
    <label>Bid Information Request</label>
    <referenceTo>Bid_Information_Request__c</referenceTo>
    <relationshipLabel>Detailed Bid Information Requests</relationshipLabel>
    <relationshipName>Bid_Information_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>