force-app/main/default/objects/Bid_Information_Request__c/fields/BIR_Issued_Days__c.field-meta.xml
<CustomField>
    <fullName>BIR_Issued_Days__c</fullName>
    <description>The Days from the bid received to creation of BIR</description>
    <inlineHelpText>Days taken to issue BIR</inlineHelpText>
    <label>BIR Issued Days</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>