force-app/main/default/objects/Bid_Information_Request__c/fields/BIR_Response_days__c.field-meta.xml
<CustomField>
    <fullName>BIR_Response_days__c</fullName>
    <description>The days taken to respond to BIR</description>
    <inlineHelpText>The days taken to respond to BIR</inlineHelpText>
    <label>BIR Response days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>