force-app/main/default/objects/Bid_Information_Request__c/fields/Customer_Contract__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Contract</label>
    <referenceTo>Customer_Contract__c</referenceTo>
    <relationshipLabel>Bid Information Requests</relationshipLabel>
    <relationshipName>Bid_Information_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>