force-app/main/default/objects/Bid_Information_Request__c/fields/Engineering_Response__c.field-meta.xml
<CustomField>
    <fullName>Engineering_Response__c</fullName>
    <label>Engineering Response</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>