force-app/main/default/objects/Bid_Information_Request__c/fields/Opportunity_Line__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Line</label>
    <referenceTo>Opportunity_Line__c</referenceTo>
    <relationshipLabel>Opportunity Line</relationshipLabel>
    <relationshipName>Bid_Information_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>