force-app/main/default/objects/Bid_Information_Request__c/fields/Responded_By__c.field-meta.xml
<CustomField>
    <fullName>Responded_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responded By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bid_Information_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>