force-app/main/default/objects/Bid_Information_Request__c/fields/Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Order</label>
    <referenceTo>Sales_Order__c</referenceTo>
    <relationshipLabel>Bid Information Requests</relationshipLabel>
    <relationshipName>Bid_Information_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>