force-app/main/default/objects/Bid_Information_Request__c/fields/Vendor_Named_in_Bid__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Named_in_Bid__c</fullName>
    <description>Vendor that has been named in the bid</description>
    <label>Vendor Named in Bid</label>
    <length>30</length>
    <type>Text</type>
</CustomField>