force-app/main/default/objects/Bid_Information_Request__c/fields/Work_Days__c.field-meta.xml
<CustomField>
    <fullName>Work_Days__c</fullName>
    <description>Calculates the work days between the Answer Due date and the response date</description>
    <inlineHelpText>The Work Days between the Answer Due Date and the Response Date</inlineHelpText>
    <label>BIR Answer Due Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>