force-app/main/default/objects/Bid_Information_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Complete__c</columns>
    <columns>Internal_Name__c</columns>
    <columns>NAME</columns>
    <columns>Customer_Contract__c</columns>
    <columns>Response_Date__c</columns>
    <columns>Question__c</columns>
    <columns>Answer_due_date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>